# react-to-rabbit

./: .gitignore  NextTime.md  ProjectTracker.md  README.md  TaskTracker.md  bunfig.toml  eslint.config.js  jest.config.json  package.json
_documentation/: CompletedTasks.md  ProjectTracker.md  architecture.md  register-handlers-spec.md
backend/: index.js
backend/config/: rabbitmq.js
backend/handlers/: registerHandler.js  testRequestHandler.js
backend/rabbitmq/: connection.js  connection.test.js
backend/websockets/: server.js  server.test.js
client/: vite.config.js
client/src/: App.jsx
client/src/utils/: loggerService.js  makeBackendRequest.js  websocketClient.js  websocketClient.test.js
services/nodejs/: register-handlers.js
services/nodejs/handlers/: test-request-handler.js  testRequestHandler.js
services/nodejs/lib/: registerHandler.js
services/python/: __init__.py  combined.py  pyproject.toml  register_handlers.py  run.py
services/python/handlers/: __init__.py  test_request_handler.py
services/python/rabbit_service/: __init__.py  main.py  rabbit.py  register_handlers.py  utils.py
services/python/rabbit_service/handlers/: __init__.py  test_handler.py
services/python/rabbit_service/rabbit_mq/: init_rabbit_mq_connection.py
services/python/shared/rabbit_mq/: __init__.py  init_rabbit_mq_connection.py
services/python/shared/utils/: load_env.py
shared/nodejs/: mongo-collections.js  validateConfig.js
shared/nodejs/rabbit-mq/: connection.js  init-rabbit-mq-connection.js  registerHandlers.js
socket-io-server/: socket-io-server.js
