[tool.poetry]
name = "rabbit-service"
version = "0.1.0"
description = "Python service for RabbitMQ message handling"
authors = ["Daniel Lewis <daniel_lewis@esri.com>"]
packages = [{include = "rabbit_service"}]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
typing-extensions = "^4.9.0"
aio-pika = "^9.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-service = "rabbit_service.main:run" 